hphp/test/zend/good/tests/classes/autoload/autoload_011.php
<?hh

class ExtendsUndefinedClass extends UndefBase
{
}

<<__EntryPoint>>
function autoload_011(): void {
  echo "Done.\n";
}
