hphp/test/zend/bad/Zend/tests/access_modifiers_001.php
<?php

class test {
	static public public static final public final function foo() {
	}
}

echo "Done\n";
?>